--- a/madlibs/index.html
+++ b/madlibs/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>My Cubicle</h1>
-    <div>
+    <div class="container">
       <input type="text" placeholder="adjective" />
       <input type="text" placeholder="superlative" />
       <input type="text" placeholder="noun(singular)" />
